--- a/style.css
+++ b/style.css
@@ -14,6 +14,10 @@ License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: aquila
 */
 
-splay: none;
-
+img {
+    max-width: 100%;
+    height: auto;
+}
+.updated:not(.published) {
+    display: none;
 }
